<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/includedHeaderLL"
            layout="@layout/top_tool_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:headerTitleText="@{@string/editProfile}"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/round_gray_edittext"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/fullName"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:maxLength="10"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_gray_edittext"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/email"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:maxLength="10"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_gray_edittext"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/mobileNumber"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:maxLength="10"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_gray_edittext"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editNearByLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/location"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:maxLength="10"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_gray_edittext"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editCity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/city"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:maxLength="10"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_gray_edittext"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editStart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/state"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:maxLength="10"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_gray_edittext"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/address"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:scrollbars="vertical"
                        android:padding="5dp"
                        android:gravity="top|start"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:minLines="6"
                        tools:ignore="Autofill,TextFields"/>
                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardLogin"
                    android:layout_width="260dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</layout>