<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginTop="25dp"
    android:layout_marginEnd="25dp"
    android:layout_marginBottom="25dp"
    app:cardBackgroundColor="@color/lightGray"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_gay_edit_login"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editSubject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:hint="@string/subject"
                android:fontFamily="@font/montserrat_medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_gay_edit_login"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editComment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:layout_gravity="start"
                android:gravity="start"
                android:background="@null"
                android:hint="@string/comment"
                android:fontFamily="@font/montserrat_medium"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSubmit"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.cardview.widget.CardView>