<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/help_ic"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/round_gray_edittext"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15sp"
                            android:layout_marginEnd="15dp"
                            android:background="@null"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/fullName"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:maxLength="10"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/round_gray_edittext"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15sp"
                            android:layout_marginEnd="15dp"
                            android:background="@null"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/email"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:maxLength="10"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/round_gray_edittext"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editPhone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15sp"
                            android:layout_marginEnd="15dp"
                            android:background="@null"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/mobileNumber"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:inputType="phone"
                            android:maxLength="10"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/round_gray_edittext"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editSubject"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15sp"
                            android:layout_marginEnd="15dp"
                            android:background="@null"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/subject"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:maxLength="10"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/round_gray_edittext"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editComment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15sp"
                            android:layout_marginEnd="15dp"
                            android:background="@null"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/comment"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:scrollbars="vertical"
                            android:padding="5dp"
                            android:gravity="top|start"
                            android:inputType="textMultiLine"
                            android:lines="8"
                            android:minLines="6"
                            tools:ignore="Autofill,TextFields"/>
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardLogin"
                        android:layout_width="260dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="25dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/submit"
                            android:textColor="@color/white"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/call_icc"
                            android:layout_marginEnd="8dp"/>
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/whatsapp_ic"
                            android:layout_marginStart="8dp"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </ScrollView>



    </LinearLayout>

</layout>