<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/login_bg_ic"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Let's Get Started"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/we_will_send_an_OTP_your_mobile_number"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="end">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="-25dp"
                    android:src="@drawable/bike_logo_ic"/>
            </LinearLayout>

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="280dp"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="#F5F5F5"
            app:cardCornerRadius="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_gay_edit_login"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserrat_medium"
                        android:layout_marginStart="15dp"
                        android:text="+91"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/down_arrow_ic"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="#9F9D9D"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/mobileNumber"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:maxLength="10"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Iagreeto"
                        android:textSize="13sp"
                        android:fontFamily="@font/montserrat"/>
                    <TextView
                        android:id="@+id/txtTermsAndConditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/TermsConditions"
                        android:fontFamily="@font/montserrat_medium"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLogin"
                    android:layout_width="260dp"
                    android:layout_height="45dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</layout>